--- a/weather/weather.html
+++ b/weather/weather.html
@@ -1,4 +1,4 @@
 <p>Weather: {{weather.weather}}</p>
 <p>Temp: {{weather.temp}}</p>
 
-<clock-weather></clock-weather>
+<clock-weather message="We're finally done"></clock-weather>
